--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
     <title>Register</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<h1>Register</h1>
-<form th:action="@{/register}" method="post">
-    <div>
-        <label>Username:</label>
-        <input type="text" name="username" th:field="*{username}"/>
-    </div>
-    <div>
-        <label>Password:</label>
-        <input type="password" name="password" th:field="*{password}"/>
-    </div>
-    <div>
-        <button type="submit">Register</button>
-    </div>
-</form>
+<div class="container">
+    <h2>Register</h2>
+    <form th:action="@{/api/auth/signup}" method="post">
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" class="form-control" id="username" name="username" th:field="${signUpRequest.username}" />
+        </div>
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" class="form-control" id="email" name="email" th:field="${signUpRequest.email}">
+        </div>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" class="form-control" id="password" name="password" th:field="${signUpRequest.password}">
+        </div>
+        <button type="submit" class="btn btn-primary">Register</button>
+    </form>
+</div>
 </body>
 </html>
