js fix for html :)

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,6 +30,6 @@
             </div>
         </form>
     </div> 
-    <script th:src="@{/bsp.js}"></script>
+    <script th:src="@{/bsp.js}" src="../static_resources/js/bsp.js"></script>
 </body>
 </html>
