--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,7 +21,7 @@
                 <input type="password" id="password" class="input password" th:field="${logInRequest.password}" name="password" required>
             </div>
             <div>
-                <button type="submit" class="input" id="submit" name="login">login</button>
+                <button type="submit" class="input" id="submit" name="signin">login</button>
             </div>
             <div class="login_type" id="switch">
                 <span id="login">login</span>
