sign in and sign up site frontend ready  (im sorry for my bad england)

--- a/src/main/resources/static_resources/css/test.css
+++ b/src/main/resources/static_resources/css/test.css
@@ -79,6 +79,10 @@ span{
     /* change link color*/
     color: white;
 }
+a{
+    /* change link color*/
+    color: white;
+}
 #signup:hover{
     /* texteffect on hover */
     text-decoration: underline;
