made a frontend site for the homepage  (im sorry for my bad england)

--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/html">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>hallo</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" th:href="@{/homepage.css}">
 </head>
 <body>
-<a>Hallo</a>
-<span th:text="${authToken}"></span>
+    <ul>
+        <li><a href="test">Home</a></li>
+        <li><a href="tipps">Tipps</a></li>
+        <li><a href="results">Results</a></li>
+        <li><a href="about">About</a></li>
+      </ul>
+      
+      <br>
+      <p>Hallo :</p>
+      <p th:text="${authToken}"> </p>
 </body>
 </html>
