added tippseite  (im sorry for my bad england)

--- a/src/main/resources/static_resources/css/results.css
+++ b/src/main/resources/static_resources/css/results.css
@@ -1,3 +1,10 @@
+#dropdown{
+    position: relative;
+    top: 1rem;
+    background: none;
+    border-style: solid;
+    border-color:black ;
+}
 ul {
     list-style-type: none;
     margin: 0;
