--- a/src/main/resources/static_resources/css/test.css
+++ b/src/main/resources/static_resources/css/test.css
@@ -2,7 +2,7 @@ html{
     /* background*/
     /*background-image: url(../images/mountain.jpg);*/
     /*background-image: url(https://images.pexels.com/photos/114296/pexels-photo-114296.jpeg);*/
-    background-image: url(https://images.unsplash.com/photo-1617623504859-5d0603345834?q=80&w=2113&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background: url(https://images.unsplash.com/photo-1617623504859-5d0603345834?q=80&w=2113&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
         backdrop-filter: blur(10px);
         background-size: cover;
         background-position: 25% 55%;
