--- a/src/main/resources/templates/tippseite.html
+++ b/src/main/resources/templates/tippseite.html
@@ -8,54 +8,52 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>
-        <li><a href="http://localhost:8080/em2024/test">Home</a></li>
-        <li><a href="http://localhost:8080/em2024/tipps">Tipps</a></li>
-        <li><a href="http://localhost:8080/em2024/results/current">Results</a></li>
-        <li><a href="http://localhost:8080/em2024/about">About</a></li>
-      </ul>
+<div class="cursor"></div>
+<div class="outline"></div>
+<ul>
+    <li><a href="http://localhost:8080/em2024/test">Home</a></li>
+    <li><a href="http://localhost:8080/em2024/tipps">Tipps</a></li>
+    <li><a href="http://localhost:8080/em2024/results/current">Results</a></li>
+    <li><a href="http://localhost:8080/em2024/about">About</a></li>
+</ul>
+<div class="site">
+    <div class="dropdown">
+        <select id="dropdown"onchange="switchSite(value)" >
+            <option value="current" >heute</option>
+            <option value="1" >1. Spieltag</option>
+            <option value="2" >2. Spieltag</option>
+            <option value="3" >3. Spieltag</option>
+            <option value="4">4. Spieltag</option>
+            <option value="5">5. Spieltag</option>
+            <option value="6">6. Spieltag</option>
+            <option value="7">7. Spieltag</option>
+        </select>
+    </div>
+    <form method="post" action="/">
+    <div id="window" th:each="spiel : ${spiele}">
 
-      <div class="dropdown">
-      <select id="dropdown"onchange="switchSite(value)" >
-        <option value="current" >heute</option>
-        <option value="1" >1. Spieltag</option>
-        <option value="2" >2. Spieltag</option>
-        <option value="3" >3. Spieltag</option>
-        <option value="4">4. Spieltag</option>
-        <option value="5">5. Spieltag</option>
-        <option value="6">6. Spieltag</option>
-        <option value="7">7. Spieltag</option>
-      </select>
-      </div>
+        <div class="logo_left" ><img th:src="${spiel.getHeimverein().getBild()}" alt=""></div>
 
-      <div class="window" th:each="spiel : ${spiele}">
-          <span th:if="${spiel.getMatchIsFinished()}" class=".finished">
-        <form method="post" th:action="@{/em2024/results/tipp}">
-            <div class="logo_left" ><img th:src="${spiel.getHeimverein().getBild()}" alt=""></div>
-            <div class="logo_right"><img th:src="${spiel.getAuswaertsverein().getBild()}" alt=""></div>
-
-          <span class="text">
+        <span class="text">
             <span class="team_left" th:text="${spiel.getHeimverein().getVereinsName()}"></span>
             <span th:if="${spiel.getMatchIsFinished()}"><span class="score_left" th:text="${spiel.getHeimVereinTore()}"></span></span>
-
               <span th:unless="${spiel.getMatchIsFinished()}">
-                  <input type="number" name="HeimVereinTore">
-
+                  <span class="score_left"><input type="number" style="width: 1rem"></span></span>
             <span class="divide">:</span>
-
               <span th:if="${spiel.getMatchIsFinished()}">
                 <span class="score_right" th:text="${spiel.getAuswaertsVereinTore()}">2</span>
             </span>
               <span th:unless="${spiel.getMatchIsFinished()}">
-                <input type="number" name="AuswaertsVereinTore">
+                  <span class="score_right"><input type="number" style="width: 1rem"></span>
               </span>
               <span class="team_right" th:text="${spiel.getAuswaertsverein().getVereinsName()}"></span>
           </span>
-        </form>
-    </span>
-      </div>
-
-    <script type="text/javascript" th:src="@{/results.js}"></script>
-
+        <div class="logo_right"><img th:src="${spiel.getAuswaertsverein().getBild()}" alt=""></div>
+    </div>
+        <input type="submit" class="submit">
+    </form>
+    <script type="text/javascript" th:src="@{/login1}"></script>
+    <script type="text/javascript" th:src="@{/tippseite.js}"></script>
+</div>
 </body>
 </html>
