added Mappings for TippFunctionality

--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -12,7 +12,7 @@
 <div class="outline"></div>
     <ul>
       <li><a href="http://localhost:8080/em2024/test">Home</a></li>
-      <li><a href="http://localhost:8080/em2024/tipps">Tipps</a></li>
+      <li><a href="http://localhost:8080/em2024/tipps/current">Tipps</a></li>
       <li><a href="http://localhost:8080/em2024/results/current">Results</a></li>
       <li><a href="http://localhost:8080/em2024/about">About</a></li>
       </ul>
