Keine Ahnung  (im sorry for my bad england)

--- a/src/main/resources/static_resources/css/tippseite.css
+++ b/src/main/resources/static_resources/css/tippseite.css
@@ -1,37 +1,49 @@
+html{
+  background: black;
+}
+.site{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+}
 #dropdown{
     position: relative;
     top: 1rem;
-    background: none;
+    background-color: black;
     border-style: solid;
-    border-color:black ;
-}
+    border-color:white ;
+    color: white;
+  }
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    border-color: black;
+    border-color: white;
+    color: white;
     border-style: solid;
     backdrop-filter: blur(10px);
     border-width: 1px;
   }
   
   li {
+    background-color: black;
+    color: white;
     float: left;
   }
   
   li a {
-    display: relative;
-    color: black;
+    background-color: black;
+    color: white;
+    float: left;
+    display: block;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
   }
-  
-  /* Change the link color to #111 (black) on hover */
   li a:hover {
     background: rgba(41, 205, 255, 0.24);
-    color: black;
+    color: white;
   }
   img{
       height: 5rem;
@@ -39,12 +51,14 @@ ul {
       border-radius: 50%;
   }
   #window{
-      display: relative;
+      display: flex;
       justify-content: space-around;
       align-items: center;
       margin-top: 2rem;
       border-style: solid;
       border-color:white;
+      border-radius: 25px;
+      color: white;
       width: 36rem;
       height: 9rem;
   }
@@ -75,5 +89,7 @@ input[type=number] {
     top: 1rem;
     background: none;
     border-style: solid;
-    border-color:black ;
+    border-color:white ;
+    color: white;
+    background: none;
 }
