--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -51,5 +51,21 @@
     <script type="text/javascript" th:src="@{/login1}"></script>
     <script type="text/javascript" th:src="@{/results.js}"></script>
     </div>
+<div class="count-particles">
+    <span class="js-count-particles"></span>
+</div>
+
+<!-- particles.js container -->
+<div id="particles-js"></div>
+</body>
+<script th:src="@{/login1.js}" src="../static_resources/js/bsp.js"></script>
+<div id="particles">
+    <script th:src="@{/login2.js}" src="../static_resources/js/bsp.js"></script>
+    <script th:src="@{/login3.js}" src="../static_resources/js/bsp.js"></script>
+
+    <!-- stats.js -->
+    <<script th:src="@{/login4.js}" src="../static_resources/js/bsp.js"></script>
+
+</div>
 </body>
 </html>
