--- a/src/main/resources/templates/tippseite.html
+++ b/src/main/resources/templates/tippseite.html
@@ -29,7 +29,7 @@
             <option value="7">7. Spieltag</option>
         </select>
     </div>
-    <form method="post" action="/">
+    <form method="post" action="/" th:name="${spiel.getMatchID()}">
     <div id="window" th:each="spiel : ${spiele}">
 
         <div class="logo_left" ><img th:src="${spiel.getHeimverein().getBild()}" alt=""></div>
