Changed Email to mailto protocoll

--- a/src/main/resources/templates/impressum.html
+++ b/src/main/resources/templates/impressum.html
@@ -18,7 +18,7 @@
     </p>
     <p><strong>Kontakt:</strong> <br>
         Telefon: +49 170 4748029<br>
-        E-Mail: <a href='baderetienne@gmail.com'>baderetienne@gmail.com</a><br></p>
+        E-Mail: <a href='mailto:baderetienne@gmail.com'>baderetienne@gmail.com</a><br></p>
     <p><strong>Haftungsausschluss: </strong><br><br><strong>Haftung für Inhalte</strong><br><br>
         Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und
         Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1
