shows Tipps on tippseite  (im sorry for my bad england)

--- a/src/main/resources/static_resources/css/tippseite.css
+++ b/src/main/resources/static_resources/css/tippseite.css
@@ -85,8 +85,8 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 .submit{
-    position: relative;
-    top: 1rem;
+    /*position: relative;
+    top: 1rem;*/
     background: none;
     border-style: solid;
     border-color:white ;
